--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2807,7 +2807,7 @@ enable_audio_bell no
 
 
 # BEGIN_KITTY_FONTS
-font_family      family='Source Code Pro' postscript_name=SourceCodePro-Regular
+font_family      family='Fira Code' postscript_name=FiraCode-Regular
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
