--- a/.config/sway/config
+++ b/.config/sway/config
@@ -251,7 +251,7 @@ bindsym $mod+r mode "resize"
     bindsym Print exec grim
 
     # Shortcut to take custom screengrab with slurp
-    bindsym $mod+s exec slurp
+    bindsym $mod+s exec grim -g "$(slurp)"
     
     # Switch audio devices
     # mod+numpad1 for speakers
